reports view fertig